postcss/tests/testData/inspections/customSelectors/customSelectorWithInvalidTokenSlash.pcss
@custom-selector <error descr="';' expected"><error descr="Unexpected token">/</error></error>